--- a/index.html
+++ b/index.html
@@ -9,19 +9,48 @@
     <title>Sports's Page</title>
 
     <!-- ============== CSS Files Here =================================== -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./src/css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet"> 
 </head>
 
 <body>
-    <h1>Alan's Sports Highlight Site</h1>
+    <div class="container-fluid">
+        <div class="jumbotron">
+            <h1 class="display-4 text-center">Alan's Sports Highlight Site</h1>
+            <hr class="my-4">
+        </div>
 
-    <div id="app">
-        {{ message }}
+        <ul class="nav nav-tabs nav-justified">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">MLB</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">NFL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">NBA</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">NHL</a>
+            </li>
+        </ul>
+
+
+        <div id="app">
+            <h2 class="text-center">{{ message }}</h2>
+        </div>
+
+
     </div>
 
     <!-- ===================== JavaScript Files Below This Line =============== -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
     <script src="index.js"></script>
-    
+
 </body>
 
 </html>
