--- a/src/img/Sports's Page.html
+++ b/src/img/Sports's Page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,12 +8,12 @@
     <title>Sports's Page</title>
 
     <!-- ============== CSS Files Here =================================== -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./src/css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet"> 
+    <link rel="stylesheet" href="Sports's%20Page_files/bootstrap.css">
+    <link rel="stylesheet" href="Sports's%20Page_files/main.css">
+    <link href="Sports's%20Page_files/css.css" rel="stylesheet"> 
 </head>
 
-<body>
+<body><script type="text/javascript" src="Sports's%20Page_files/livereload.js" async="" defer="defer"></script>
     <div class="container-fluid">
         <div class="jumbotron">
             <h1 class="display-4 text-center">Alan's Sports Highlight Site</h1>
@@ -45,12 +44,12 @@
     </div>
 
     <!-- ===================== JavaScript Files Below This Line =============== -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="Sports's%20Page_files/jquery-3.js"></script>
+    <script src="Sports's%20Page_files/popper.js"></script>
+    <script src="Sports's%20Page_files/bootstrap.js"></script>
 
-    <script src="index.js"></script>
+    <script src="Sports's%20Page_files/index.js"></script>
 
-</body>
 
-</html>
+
+</body></html>
