--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 
         <div id="app">
-            <h2 class="text-center">{{ info }}</h2>
+            <h2 class="text-center">MLB Scores</h2>
+            <p>{{ info.data }}</p>
         </div>
 
 
