--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
         <div id="app">
             <h2 class="text-center">MLB Scores</h2>
-            <p>{{ info.data }}</p>
+            <p class="score-line">{{ awayTeam }}</p>
+            <p class="score-line">{{ homeTeam }}</p>
         </div>
 
 
