--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <!-- ============== CSS Files Here =================================== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./src/css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="jumbotron">
-            <h1 class="display-4 text-center">Alan's Sports Highlight Site</h1>
-            <hr class="my-4">
-        </div>
-
+        <h1 class="display-4 text-center">Alan's Sports Highlight Site</h1>
+        <hr class="my-4">
         <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
                 <a class="nav-link active" href="#">MLB</a>
@@ -39,8 +36,8 @@
 
         <div id="app">
             <h2 class="text-center">MLB Scores</h2>
-            <p class="score-line">{{ awayTeam }}</p>
-            <p class="score-line">{{ homeTeam }}</p>
+            <p class="box-score-item">{{ awayTeam }}</p>
+            <p class="box-score-item">{{ homeTeam }}</p>
         </div>
 
 
