--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
         <div id="app">
             <h2 class="text-center">MLB Scores</h2>
+            <h3 class="text-center">For {{ gameDate }}</h3>
+            <p class="box-score-item is-completed" v-show="isCompleted">Final</p>
+            
             <p class="box-score-item">{{ awayTeam }}</p>
             <p class="box-score-item">{{ homeTeam }}</p>
         </div>
