--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             
             <p class="box-score-item">{{ awayTeam }}</p>
             <p class="box-score-item">{{ homeTeam }}</p>
+
+            <p>{{ gameData }}</p>
+
         </div>
 
 
