--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
         <div id="app">
             <h2 class="text-center">MLB Scores</h2>
             <h3 class="text-center">For {{ gameDate }}</h3>
-            <p class="box-score-item is-completed" v-show="isCompleted">Final</p>
-            
-            <p class="box-score-item">{{ awayTeam }}</p>
-            <p class="box-score-item">{{ homeTeam }}</p>
 
-            <p>{{ gameData }}</p>
+            <div v-for="(value, key, index) in gameData">
+                <p class="box-score-item is-completed" v-if="value.isCompleted">Final</p>
+                <p class="box-score-item"> {{ value.game.awayTeam.City }} {{ value.game.awayTeam.Name }}
 
+                </p>
+                <span class="box-score-item">{{ value.awayScore }}</span>
+                <p class="box-score-item"> {{ value.game.homeTeam.City }} {{ value.game.homeTeam.Name }}
+
+                </p>
+                <span class="box-score-item">{{ value.homeScore }}</span>
+                <br>
+            </div>
         </div>
 
 
