--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
             <h3 class="text-center">For {{ gameDate }}</h3>
 
             <div class="flex-container">
-                <div v-for="(value, key, index) in gameData">
+                <div v-for="value in gameData">
                     <p class="box-score-status is-completed" v-if="value.isCompleted">Final</p>
 
                     <p class="box-score-team"> {{ value.game.awayTeam.City }} {{ value.game.awayTeam.Name }}</p>
                         <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
                             {{inning_score.awayScore }}</span>
-                        <span class="box-score-final" v-bind:class="{ awayWon: isActive }">{{ value.awayScore }}</span>
+                        <span class="box-score-final" v-bind:class="{ won: value.awayScore > value.homeScore }">{{ value.awayScore }}</span>
                 
                     <p class="box-score-team"> {{ value.game.homeTeam.City }} {{ value.game.homeTeam.Name }}</p>
                         <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
                             {{inning_score.homeScore }}</span>
-                        <span class="box-score-final" v-bind:class="{ homeWon: isActive }">{{ value.homeScore }}</span>
+                        <span class="box-score-final" v-bind:class="{ won: value.homeScore > value.awayScore }">{{ value.homeScore }}</span>
                     <br>
                 </div>
             </div>
