--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             </div>
         </div>
 
+       <!--  Test markup -->
+        <div id="appTest">
+            <h1>{{ message }}</h1>
+        </div>
+
 
     </div>
 
