--- a/index.html
+++ b/index.html
@@ -39,39 +39,36 @@
 
 
             <button v-for="tab in tabs" 
-                v-bind:key="tab"
+                v-bind:key="tab" 
                 v-bind:class="['tab-button', {active: currentTab === tab }]" 
                 v-on:click="currentTab = tab">{{ tab }}
             </button>
 
             <component v-bind:is="currentTabComponent" class="tab"></component>
 
-            <div class="flex-container">
-                <div v-for="value in gameData">
-                    <p class="box-score-status is-completed" v-if="value.isCompleted">Final</p>
+            <template id="mlb-template">
+                <div class="flex-container">
+                    <div v-for="value in gameData">
+                        <p class="box-score-status is-completed" v-if="value.isCompleted">Final</p>
 
-                    <p class="box-score-team"> {{ value.game.awayTeam.City }} {{ value.game.awayTeam.Name }}</p>
-                    <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
-                        {{inning_score.awayScore }}</span>
-                    <span class="box-score-final" v-bind:class="{ won: value.awayScore > value.homeScore }">{{ value.awayScore
-                        }}</span>
+                        <p class="box-score-team"> {{ value.game.awayTeam.City }} {{ value.game.awayTeam.Name }}</p>
+                        <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
+                            {{inning_score.awayScore }}</span>
+                        <span class="box-score-final" v-bind:class="{ won: value.awayScore > value.homeScore }">{{ value.awayScore
+                            }}
+                        </span>
 
-                    <p class="box-score-team"> {{ value.game.homeTeam.City }} {{ value.game.homeTeam.Name }}</p>
-                    <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
-                        {{inning_score.homeScore }}</span>
-                    <span class="box-score-final" v-bind:class="{ won: value.homeScore > value.awayScore }">{{ value.homeScore
-                        }}</span>
-                    <br>
+                        <p class="box-score-team"> {{ value.game.homeTeam.City }} {{ value.game.homeTeam.Name }}</p>
+                        <span class="box-score-inning" v-for="inning_score in value.inningSummary.inning">
+                            {{inning_score.homeScore }}</span>
+                        <span class="box-score-final" v-bind:class="{ won: value.homeScore > value.awayScore }">{{ value.homeScore
+                            }}
+                        </span>
+                        <br>
+                    </div>
                 </div>
-            </div>
+            </template>
         </div>
-
-       <!--  Test markup -->
-        <div id="appTest">
-            <h1>{{ message }}</h1>
-        </div>
-
-
     </div>
 
     <!-- ===================== JavaScript Files Below This Line =============== -->
