--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         because html is case insensitive and we used camelCase for
                         variable names in component.
             -->  
-            <component v-bind:is="currentTabComponent" v-bind:baseball-data="mlbData" class="tab"></component>
+            <component v-bind:is="currentTabComponent" v-bind:baseball_data="mlbData" class="tab"></component>
                             
         </div>
     </div>
