--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr class="my-4">
         
         <div id="app">
-            <h2 class="text-center">MLB Scores</h2>
+            <h2 class="text-center">{{ currentTab }} Scores</h2>
             <h3 class="text-center">For {{ gameDate }}</h3>
 
             <button v-for="tab in tabs" 
