--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <title>Sports's Page</title>
 
-    <!-- ============== CSS Files Here =================================== -->
+    <!-- ====================================================================== -->
+    <!-- ============== CSS Files Here ======================================== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./src/css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
@@ -22,6 +23,15 @@
         <div id="app">
             <h2 class="text-center">{{ currentTab }} Scores</h2>
             <h3 class="text-center">For {{ gameDate }}</h3>
+
+            <!-- Error Handling Markup for API Calls -->
+            <section v-if="errored">
+                <p>We're sorry, we're not able to retrieve this information at the moment, please try back later</p>
+            </section>
+            <section v-else>
+               <div v-if="loading">Loading...</div>
+            </section>
+            <!-- End API Error Markup -->
 
             <button v-for="tab in tabs" 
                 v-bind:key="tab" 
@@ -37,8 +47,9 @@
                             
         </div>
     </div>
-
+    <!-- ====================================================================== -->
     <!-- ===================== JavaScript Files Below This Line =============== -->
+    <!-- ====================================================================== -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
