refactor todo: add Playoff Scores

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <hr class="my-4">
         
         <div id="app">
+            <img v-bind:src="sport_logo_image">
             <h2 class="text-center">{{ currentTab }} Scores</h2>
             <h3 class="text-center">For {{ gameDate }} </h3>
 
