Refactor Beta 1 complete. Add CSS Stylings..

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./src/css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">  
 </head>
 
 <body>
     <div class="container-fluid">
-        <h1 class="display-4 text-center">Alan's Sports Highlight Site</h1>
+        <h1 class="display-4 text-center">Sports Scores From Around The Leagues</h1>
         <hr class="my-4">
         
         <div id="app">
