commit: fixed async copy trouble.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/test.css" />
 </head>
 
 <body>
