--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         because html is case insensitive and we used camelCase for
                         variable names in component.
             -->  
-            <component v-bind:is="currentTabComponent" v-bind:props_league_data="baseball_feeds_data" v-bind:props_league_data_nfl="nfl_feeds" v-bind:props_league_standings="standings" class="tab"></component>
+            <component v-bind:is="currentTabComponent" v-bind:props_league_data="baseball_feeds_data" v-bind:props_league_data_nfl="nfl_feeds" v-bind:props_league_standings="standings" v-bind:props_baseball_playoffs="baseball_playoffs" class="tab"></component>
                             
         </div>
     </div>
