--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css" />
-    <link rel="stylesheet" href="./src/css/test.css" />
 </head>
 
 <body>
     <div class="container-fluid">
-        <h1 class="display-4 text-center">Sports Scores From Around The Leagues</h1>
-        <hr class="my-4">
+        <h1 class="text-center">Scores From Around The Leagues</h1>
+        <hr class="my-2">
         
         <div id="app">
             <img v-bind:src="sport_logo_image">
