commit add title images

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 <body>
     <div class="container-fluid">
         <h1 class="text-center">Scores From Around The Leagues</h1>
+        <div class="title-images d-inline-flex justify-content-around fixed-top">
+            <img src="./src/img/mlb-sm.jpg" alt="Pitcher Throwing Ball">
+            <img src="./src/img/nfl-sm.jpg" alt="David Tyree Superbowl Catch">
+            <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking">
+        </div>
         <hr class="my-2">
         
         <div id="app">
@@ -52,9 +57,7 @@
     <!-- ====================================================================== -->
     <!-- ===================== JavaScript Files Below This Line =============== -->
     <!-- ====================================================================== -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- No Javascript for Bootstrap or jQuery needed. Gotta like Vue.js. -->
 
     <script src="index.js"></script>
 
