--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="./src/css/main.css" />
 </head>
 
@@ -25,7 +26,9 @@
             <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking">
         </div>
         <hr class="my-2">
-
+        <!-- =========================================================== -->
+        <!-- ================= Vue Main Instance ======================= -->
+        <!-- =========================================================== -->
         <div id="app" class="mt-xs-1">
             <img v-bind:src="sport_logo_image">
             <h2 class="text-center">{{ currentTab }} Scores</h2>
@@ -51,10 +54,31 @@
             <component v-bind:is="currentTabComponent" v-bind:props_league_data="sports_feeds_data"
                 v-bind:props_league_data_nfl="nfl_feeds" v-bind:props_league_standings="standings"
                 v-bind:props_baseball_playoffs="baseball_playoffs" v-bind:props_nfl_playoffs="nfl_playoffs"
-                v-bind:props_basketball_playoffs="basketball_playoffs" v-bind:props_end_of_season="end_of_season" class="tab"></component>
+                v-bind:props_basketball_playoffs="basketball_playoffs" v-bind:props_end_of_season="end_of_season" class="tab">
+            </component>
 
         </div>
-    </div>
+        <!-- =========================================================== -->
+        <!-- ================= End Vue Main Instance =================== -->
+        <!-- =========================================================== -->
+<!-- ------------------------------------------------------------------------------------------- -->
+        <!-- =========================================================== -->
+        <!-- ================= Vue Top Instance ======================== -->
+        <!-- =========================================================== -->
+
+        <div class="top">
+            <a href="#" class="back-to-top">
+                <i class="fa fa-arrow-circle-up"></i>
+            </a>
+        </div>
+
+        <!-- =========================================================== -->
+        <!-- ================= End Vue Top Instance ==================== -->
+        <!-- =========================================================== -->
+
+
+    </div> <!-- ==============  End container ============================================= -->
+
     <!-- ====================================================================== -->
     <!-- ===================== JavaScript Files Below This Line =============== -->
     <!-- ====================================================================== -->
