--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./src/css/main.css" />
 </head>
 
@@ -26,9 +26,9 @@
             <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking">
         </div>
         <hr class="my-2">
-        <!-- =========================================================== -->
-        <!-- ================= Vue Main Instance ======================= -->
-        <!-- =========================================================== -->
+        <!-- ===================================================================== -->
+        <!-- ================= Vue Main Instance ================================= -->
+        <!-- ===================================================================== -->
         <div id="app" class="mt-xs-1">
             <img v-bind:src="sport_logo_image">
             <h2 class="text-center">{{ currentTab }} Scores</h2>
@@ -57,24 +57,30 @@
                 v-bind:props_basketball_playoffs="basketball_playoffs" v-bind:props_end_of_season="end_of_season" class="tab">
             </component>
 
-        </div>
-        <!-- =========================================================== -->
-        <!-- ================= End Vue Main Instance =================== -->
-        <!-- =========================================================== -->
-<!-- ------------------------------------------------------------------------------------------- -->
-        <!-- =========================================================== -->
-        <!-- ================= Vue Top Instance ======================== -->
-        <!-- =========================================================== -->
+    <!-- ------------------------------------------------------------------------------------------- -->
 
-        <div class="top">
-            <a href="#" class="back-to-top">
-                <i class="fa fa-arrow-circle-up"></i>
-            </a>
-        </div>
+            <!-- ======================================================== -->
+            <!-- ================ Vue backToTop Component =============== -->
+            <!-- ======================================================== -->
+            <backtotop></backtotop> <!-- the backToTop component -->
 
-        <!-- =========================================================== -->
-        <!-- ================= End Vue Top Instance ==================== -->
-        <!-- =========================================================== -->
+            <!-- Instead of putting template markup in topComponent template we just 
+            put it here w/id reference in backToTop template in the js file -->
+            <script type="text/x-template" id="backtotop">
+                <button class="goTop" v-if="isVisible" @click="backToTop">
+                    <i class="fa fa-angle-up" aria-hidden="true"></i>
+                </button>
+            </script>
+
+            <!-- =================================================== -->
+            <!-- =========== End Vue backToTop Component =========== -->
+            <!-- =================================================== -->
+
+        </div> <!-- --- End Main Vue #app div ---- -->
+
+        <!-- ======================================================================= -->
+        <!-- ================= End Vue Main Instance =============================== -->
+        <!-- ======================================================================= -->
 
 
     </div> <!-- ==============  End container ============================================= -->
@@ -82,8 +88,9 @@
     <!-- ====================================================================== -->
     <!-- ===================== JavaScript Files Below This Line =============== -->
     <!-- ====================================================================== -->
-    <!-- No jQuery needed. Gotta like Vue.js. -->
-
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
 
 </body>
