--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- ============== CSS Files Here ======================================== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Bevan|Chonburi|Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bevan|Chonburi|Lora" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="./src/css/main.css" />
 </head>
 
@@ -39,7 +39,9 @@
                 <p>We're sorry, we're not able to retrieve this information at the moment, please try back later</p>
             </section>
             <section v-else>
-                <div v-if="loading">Loading...</div>
+                <div  class= "loading" v-if="loading">Loading...
+                    <i class="fas fa-spinner"></i>
+                </div>
             </section>
             <!-- End API Error Markup -->
 
@@ -57,7 +59,7 @@
                 v-bind:props_basketball_playoffs="basketball_playoffs" v-bind:props_end_of_season="end_of_season" class="tab">
             </component>
 
-    <!-- ------------------------------------------------------------------------------------------- -->
+            <!-- ------------------------------------------------------------------------------------------- -->
 
             <!-- ======================================================== -->
             <!-- ================ Vue backToTop Component =============== -->
