Adding footer to site

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         <!-- ================= End Vue Main Instance =============================== -->
         <!-- ======================================================================= -->
 
+        <div class="footer">
+            <a href="https://www.mlb.com" target="_blank">MLB.com</a>
+            <a href="https://www.nfl.com" target="_blank">NFL.com</a>
+            <a href="https://www.nba.com" target="_blank">NBA.com</a>
+        </div>
 
     </div> <!-- ==============  End container ============================================= -->
 
