--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <!-- ======================================================================= -->
 
         <div class="footer">
-            <a href="https://www.mlb.com" target="_blank">MLB.com</a>
-            <a href="https://www.nfl.com" target="_blank">NFL.com</a>
-            <a href="https://www.nba.com" target="_blank">NBA.com</a>
+            <a href="https://www.mlb.com" target="_blank">MLB.com<img src="src/img/mlb_logo.svg"></a>
+            <a href="https://www.nfl.com" target="_blank">NFL.com<img src="src/img/nfl_logo.svg"></a>
+            <a href="https://www.nba.com" target="_blank">NBA.com<img src="src/img/nba_logo.svg"></a>
         </div>
 
     </div> <!-- ==============  End container ============================================= -->
