--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p>We're sorry, we're not able to retrieve this information at the moment, please try back later</p>
             </section>
             <section v-else>
-                <div class="loading" v-if="loading">Loading...
-                    <i class="fas fa-spinner"></i>
+                <div class="loading" v-if="loading">Loading 
+                    <i class="fas fa-spinner spin-it" aria-hidden="true"></i>
                 </div>
             </section>
             <!-- End API Error Markup -->
