--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             </section>
             <section v-else>
                 <div class="loading" v-if="loading">Loading 
+                    <!-- below is our font awesome icon with the class “spin-it” where 
+                         we have set the infinite animation: -->   
                     <i class="fas fa-spinner spin-it" aria-hidden="true"></i>
                 </div>
             </section>
