--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- ===================================================================== -->
         <!-- ================= Vue Main Instance ================================= -->
         <!-- ===================================================================== -->
-        <div id="app" class="mt-xs-1">
+        <div id="app" class="mt-xs-1" v-cloak>
             <img v-bind:src="sport_logo_image">
             <h2 class="text-center">{{ currentTab }} Scores</h2>
             <h3 class="text-center">For {{ gameDate }} </h3>
