--- a/index.html
+++ b/index.html
@@ -1,101 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Sports's Page</title>
 
     <!-- ====================================================================== -->
     <!-- ============== CSS Files Here ======================================== -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bevan|Chonburi|Lora" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Libre+Baskerville"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bevan|Chonburi|Lora"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    />
     <link rel="stylesheet" href="./src/css/main.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        <h1 class="text-center inset-shadow">Scores From Around The Leagues</h1>
-        <div class="title-images d-inline-flex justify-content-around fixed-top">
-            <img src="./src/img/mlb-sm.jpg" alt="Pitcher Throwing Ball">
-            <img src="./src/img/nfl-sm.jpg" alt="David Tyree Superbowl Catch">
-            <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking">
-        </div>
-        <hr class="my-2">
-        <!-- ===================================================================== -->
-        <!-- ================= Vue Main Instance ================================= -->
-        <!-- ===================================================================== -->
-        <div id="app" class="mt-xs-1" v-cloak>
-            <img v-bind:src="sport_logo_image">
-            <h2 class="text-center">{{ currentTab }} Scores</h2>
-            <h3 class="text-center">For {{ gameDate }} </h3>
+      <h1 class="text-center inset-shadow">Scores From Around The Leagues</h1>
+      <div class="title-images d-inline-flex justify-content-around fixed-top">
+        <img src="./src/img/mlb-sm.jpg" alt="Pitcher Throwing Ball" />
+        <img src="./src/img/nfl-sm.jpg" alt="David Tyree Superbowl Catch" />
+        <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking" />
+      </div>
+      <hr class="my-2" />
+      <!-- ===================================================================== -->
+      <!-- ================= Vue Main Instance ================================= -->
+      <!-- ===================================================================== -->
+      <div id="app" class="mt-xs-1" v-cloak>
+        <img v-bind:src="sport_logo_image" />
+        <h2 class="text-center">{{ currentTab }} Scores</h2>
+        <h3 class="text-center">For {{ gameDate }}</h3>
 
-            <!-- Error Handling Markup for API Calls -->
-            <section v-if="errored">
-                <p>We're sorry, we're not able to retrieve this information at the moment, please try back later</p>
-            </section>
-            <section v-else>
-                <div class="loading" v-if="loading">Loading 
-                    <!-- below is our font awesome icon with the class “spin-it” where 
-                         we have set the infinite animation: -->   
-                    <i class="fas fa-spinner spin-it" aria-hidden="true"></i>
-                </div>
-            </section>
-            <!-- End API Error Markup -->
+        <!-- Error Handling Markup for API Calls -->
+        <section v-if="errored">
+          <p>
+            We're sorry, we're not able to retrieve this information at the
+            moment, please try back later
+          </p>
+        </section>
+        <section v-else>
+          <div class="loading" v-if="loading">
+            Loading
+            <!-- below is our font awesome icon with the class “spin-it” where 
+                         we have set the infinite animation: -->
+            <i class="fas fa-spinner spin-it" aria-hidden="true"></i>
+          </div>
+        </section>
+        <!-- End API Error Markup -->
 
-            <button v-for="tab in tabs" v-bind:key="tab" v-bind:class="['tab-button', {active: currentTab === tab }]"
-                v-on:click="getSportsData( tab )">{{ tab }}
-            </button>
-            <!--  ==== v-bind:is tells us what component to use i.e. mlb-tab  
+        <button
+          v-for="tab in tabs"
+          v-bind:key="tab"
+          v-bind:class="['tab-button', {active: currentTab === tab }]"
+          v-on:click="getSportsData( tab )"
+        >
+          {{ tab }}
+        </button>
+        <!--  ==== v-bind:is tells us what component to use i.e. mlb-tab  
                         Important. Must use kebab case for v-bind baseballData attribute
                         because html is case insensitive and we used camelCase for
                         variable names in component. <keep-alive> caches components once
                         rendered. Here it works out good.
             -->
-            <keep-alive>
-                <component v-bind:is="currentTabComponent" v-bind:props_league_data="sports_feeds_data"
-                    v-bind:props_league_data_nfl="nfl_feeds" v-bind:props_league_standings="standings"
-                    v-bind:props_baseball_playoffs="baseball_playoffs" v-bind:props_nfl_playoffs="nfl_playoffs"
-                    v-bind:props_basketball_playoffs="basketball_playoffs" v-bind:props_end_of_season="end_of_season" class="tab">
-                </component>
-            </keep-alive>
+        <keep-alive>
+          <component
+            v-bind:is="currentTabComponent"
+            v-bind:props_league_data="sports_feeds_data"
+            v-bind:props_league_data_nfl="nfl_feeds"
+            v-bind:props_league_standings="standings"
+            v-bind:props_baseball_playoffs="baseball_playoffs"
+            v-bind:props_nfl_playoffs="nfl_playoffs"
+            v-bind:props_basketball_playoffs="basketball_playoffs"
+            v-bind:props_end_of_season="end_of_season[this.currentTab.toLowerCase()]"
+            class="tab"
+          >
+          </component>
+        </keep-alive>
 
-            <!-- ------------------------------------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------------------------------------- -->
 
-            <!-- ======================================================== -->
-            <!-- ================ Vue backToTop Component =============== -->
-            <!-- ======================================================== -->
-            <backtotop></backtotop> <!-- the backToTop component -->
+        <!-- ======================================================== -->
+        <!-- ================ Vue backToTop Component =============== -->
+        <!-- ======================================================== -->
+        <backtotop></backtotop>
+        <!-- the backToTop component -->
 
-            <!-- Instead of putting template markup in topComponent template we just 
+        <!-- Instead of putting template markup in topComponent template we just 
             put it here w/id reference in backToTop template in the js file -->
-            <script type="text/x-template" id="backtotop">
-                <button class="goTop" v-if="isVisible" @click="backToTop">
-                    <i class="fa fa-angle-up" aria-hidden="true"></i>
-                </button>
-            </script>
+        <script type="text/x-template" id="backtotop">
+          <button class="goTop" v-if="isVisible" @click="backToTop">
+              <i class="fa fa-angle-up" aria-hidden="true"></i>
+          </button>
+        </script>
 
-            <!-- =================================================== -->
-            <!-- =========== End Vue backToTop Component =========== -->
-            <!-- =================================================== -->
+        <!-- =================================================== -->
+        <!-- =========== End Vue backToTop Component =========== -->
+        <!-- =================================================== -->
+      </div>
+      <!-- --- End Main Vue #app div ---- -->
 
-        </div> <!-- --- End Main Vue #app div ---- -->
+      <!-- ======================================================================= -->
+      <!-- ================= End Vue Main Instance =============================== -->
+      <!-- ======================================================================= -->
 
-        <!-- ======================================================================= -->
-        <!-- ================= End Vue Main Instance =============================== -->
-        <!-- ======================================================================= -->
-
-        <div class="footer">
-            <a href="https://www.mlb.com" target="_blank">MLB.com<img src="./src/img/mlb_logo.svg"></a>
-            <a href="https://www.nfl.com" target="_blank">NFL.com<img src="./src/img/nfl_logo.svg"></a>
-            <a href="https://www.nba.com" target="_blank">NBA.com<img src="./src/img/nba_logo.svg"></a>
-        </div>
-
-    </div> <!-- ==============  End container ============================================= -->
+      <div class="footer">
+        <a href="https://www.mlb.com" target="_blank"
+          >MLB.com<img src="./src/img/mlb_logo.svg"
+        /></a>
+        <a href="https://www.nfl.com" target="_blank"
+          >NFL.com<img src="./src/img/nfl_logo.svg"
+        /></a>
+        <a href="https://www.nba.com" target="_blank"
+          >NBA.com<img src="./src/img/nba_logo.svg"
+        /></a>
+      </div>
+    </div>
+    <!-- ==============  End container ============================================= -->
 
     <!-- ====================================================================== -->
     <!-- ===================== JavaScript Files Below This Line =============== -->
@@ -104,7 +138,5 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
-
-</body>
-
+  </body>
 </html>
