--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <keep-alive>
           <!-- === The Main Web Component ========= -->
           <component
-            v-bind:is="currentTabComponent"  
+            v-bind:is="currentTabComponent"
             v-bind:props_league_data="sports_feeds_data"
             v-bind:props_league_data_nfl="nfl_feeds"
             v-bind:props_league_standings="standings"
@@ -87,6 +87,8 @@
             v-bind:props_nfl_playoffs="nfl_playoffs"
             v-bind:props_basketball_playoffs="basketball_playoffs"
             v-bind:props_end_of_season="end_of_season[this.currentTab.toLowerCase()]"
+            v-bind:props_boxscore="sports_feeds_boxscore"
+            v-bind:props_box_game_scores="gameBoxScores"
             class="tab"
           >
           </component>
