--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             v-bind:props_nfl_playoffs="nfl_playoffs"
             v-bind:props_basketball_playoffs="basketball_playoffs"
             v-bind:props_end_of_season="end_of_season[this.currentTab.toLowerCase()]"
-            v-bind:props_boxscore="sports_feeds_boxscore"
-            v-bind:props_box_game_scores="gameBoxScores"
+            v-bind:props_box_game_scores="sports_feeds_boxscores"
             class="tab"
           >
           </component>
