commit. Finish Cumulative Stats

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <backtotop></backtotop>
         <!-- the backToTop component -->
 
-        <!-- Instead of putting template markup in topComponent template we just 
-            put it here w/id reference in backToTop template in the js file -->
+        <!-- Instead of putting template markup in topHelperComponent template we just 
+            put it here w/id reference in backToTop template in the Component file -->
         <script type="text/x-template" id="backtotop">
           <button class="goTop" v-if="isVisible" @click="backToTop">
               <i class="fa fa-angle-up" aria-hidden="true"></i>
