--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="container-fluid">
       <h1 class="text-center inset-shadow">Scores From Around The Leagues</h1>
-      <div class="title-images d-inline-flex justify-content-around fixed-top">
+      <div id="sportsImages" class="title-images d-inline-flex justify-content-around fixed-top">
         <img src="./src/img/mlb-sm.jpg" alt="Pitcher Throwing Ball" />
         <img src="./src/img/nfl-sm.jpg" alt="David Tyree Superbowl Catch" />
         <img src="./src/img/nba-sm.jpg" alt="Michael Jordan Dunking" />
