--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             v-bind:props_basketball_playoffs="basketball_playoffs"
             v-bind:props_end_of_season="end_of_season[this.currentTab.toLowerCase()]"
             v-bind:props_box_game_scores="sports_feeds_boxscores[this.currentTab.toLowerCase()]"
+            v-bind:props_box_game_scores_nfl="sports_feeds_boxscores_nfl"
             class="tab"
           >
           </component>
