commit. Fix closure issue in getBoxScores.js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         rendered. Here it works out good.
         -->
         <keep-alive>
-          <!-- === The Main Web Component ========= -->
+          <!-- === The Main Web Component's ========= -->
           <component
             v-if="currentTabComponent === 'tab-mlb'"
             v-bind:is="currentTabComponent"
@@ -122,7 +122,7 @@
             class="tab"
           >
           </component>
-          <!-- === End The Main Web Component ========= -->
+          <!-- === End The Main Web Component's ========= -->
         </keep-alive>
 
         <!-- ------------------------------------------------------------------------------------------- -->
