--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     />
     <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/teamColors.css">
   </head>
 
   <body>
