--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <link rel="stylesheet" href="./src/css/main.css" />
     <link rel="stylesheet" href="./src/css/teamColors.css">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.jpg" type="image/jpg">
   </head>
 
   <body>
